style: fix blurry image for pools

--- a/src/app/pwa/_styles/app-styles.css
+++ b/src/app/pwa/_styles/app-styles.css
@@ -190,7 +190,6 @@
 
 .detail_card_banner {
     border-radius: 2.3125rem;
-    filter: blur(0.5229067802429199px);
     width: 100%;
     height: 20.6875rem;
     flex-shrink: 0;
@@ -199,7 +198,7 @@
 .detail_card_banner_status {
     border-radius: 0rem 0rem 2.25rem 4.5625rem;
     background: rgba(121, 121, 121, 0.4);
-    backdrop-filter: blur(13.262609481811523px);
+    backdrop-filter: blur(12px);
     position: absolute;
     width: 100%;
     left: 0;
